--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ local.properties
 .settings/
 .loadpath
 .recommenders
+test/com/og/jrest/test/logging/testlogs/*.txt
 
 # External tool builders
 .externalToolBuilders/
