--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,9 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry kind="lib" path="dependencies/annotations-2.0.1.jar"/>
+	<classpathentry kind="lib" path="dependencies/guava-15.0.jar"/>
+	<classpathentry kind="lib" path="dependencies/javassist-3.19.0-GA.jar"/>
+	<classpathentry kind="lib" path="dependencies/reflections-0.9.10.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
