--- a/test/com/og/jrest/test/api.config
+++ b/test/com/og/jrest/test/api.config
@@ -11,6 +11,9 @@
 		<description>
 			Example of what a jREST application might look like
 		</description>
+		<link>
+			http://www.api-documentation.com/stuff/things
+		</link>
 	</application>
 	
 	<!-- Configuration for the Controllers -->
@@ -57,7 +60,9 @@
 				</origin>
 			</allow>
 			<deny>
-				https://www.evilwebsite.com
+				<origin>
+					https://www.evilwebsite.com
+				</origin>
 			</deny>
 		</cors-policy>
 		<session>
