added modeltable and stuff

--- a/test/com/og/jrest/test/api.config
+++ b/test/com/og/jrest/test/api.config
@@ -29,6 +29,15 @@
 		</package>
 	</controllers>
 	
+	<models>
+		<package>
+			com.example.models
+		</package>
+		<package>
+			com.example.another.package.of.models
+		</package>
+	</models>
+	
 	<!-- Configuration for errors -->
 	<errors>
 		<custom-response>
@@ -67,7 +76,9 @@
 		</cors-policy>
 		<session>
 			<cookie>
-				<key>jrest-session</key>
+				<key>
+					jrest-session
+				</key>
 			</cookie>
 			<length>
 				3600
